--- a/appinfo.json
+++ b/appinfo.json
@@ -1,72 +1,72 @@
 {
-    "versionLabel": "2.0.0",
-    "watchapp": {
-        "watchface": true
-    },
-    "appKeys": {
-        "bg": 1,
-        "time": 4,
-        "alert": 3,
-        "delta": 5,
-        "readtime": 2,
-        "icon": 0
-    },
+    "companyName": "HackingType1-CostikCare,LLC",
     "longName": "CGM",
-    "shortName": "CGM",
+    "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9",
     "capabilities": [
         ""
     ],
-    "companyName": "HackingType1-CostikCare,LLC",
+    "versionLabel": "2.0.0",
+    "appKeys": {
+        "icon": 0,
+        "alert": 3,
+        "delta": 5,
+        "time": 4,
+        "readtime": 2,
+        "bg": 1
+    },
+    "watchapp": {
+        "watchface": true
+    },
+    "versionCode": 2,
     "resources": {
         "media": [
             {
                 "file": "images/none.png",
-                "type": "png",
-                "name": "IMAGE_NONE"
+                "name": "IMAGE_NONE",
+                "type": "png"
             },
             {
                 "file": "images/down45.png",
-                "type": "png",
-                "name": "IMAGE_DOWN45"
+                "name": "IMAGE_DOWN45",
+                "type": "png"
             },
             {
                 "file": "images/downdown.png",
-                "type": "png",
-                "name": "IMAGE_DOWNDOWN"
+                "name": "IMAGE_DOWNDOWN",
+                "type": "png"
             },
             {
                 "file": "images/down.png",
-                "type": "png",
-                "name": "IMAGE_DOWN"
+                "name": "IMAGE_DOWN",
+                "type": "png"
             },
             {
                 "file": "images/flat.png",
-                "type": "png",
-                "name": "IMAGE_FLAT"
+                "name": "IMAGE_FLAT",
+                "type": "png"
             },
             {
                 "file": "images/up45.png",
-                "type": "png",
-                "name": "IMAGE_UP45"
+                "name": "IMAGE_UP45",
+                "type": "png"
             },
             {
                 "file": "images/upup.png",
-                "type": "png",
-                "name": "IMAGE_UPUP"
+                "name": "IMAGE_UPUP",
+                "type": "png"
             },
             {
                 "file": "images/up.png",
-                "type": "png",
-                "name": "IMAGE_UP"
+                "name": "IMAGE_UP",
+                "type": "png"
             },
             {
-                "menuIcon": true,
                 "file": "images/logo.png",
-                "type": "png",
-                "name": "IMAGE_MENU_ICON"
+                "menuIcon": true,
+                "name": "IMAGE_MENU_ICON",
+                "type": "png"
             }
         ]
     },
-    "versionCode": 2,
-    "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9"
+    "shortName": "CGM"
 }
