--- a/appinfo.json
+++ b/appinfo.json
@@ -1,72 +1,72 @@
 {
-    "longName": "CGM",
-    "companyName": "HackingType1-CostikCare,LLC",
     "versionLabel": "2.0.0",
     "watchapp": {
         "watchface": true
     },
     "appKeys": {
-        "readtime": 2,
-        "icon": 0,
         "bg": 1,
         "alert": 3,
+        "icon": 0,
         "time": 4,
+        "readtime": 2,
         "delta": 5
     },
-    "resources": {
-        "media": [
-            {
-                "file": "images/none.png",
-                "name": "IMAGE_NONE",
-                "type": "png"
-            },
-            {
-                "file": "images/down45.png",
-                "name": "IMAGE_DOWN45",
-                "type": "png"
-            },
-            {
-                "file": "images/downdown.png",
-                "name": "IMAGE_DOWNDOWN",
-                "type": "png"
-            },
-            {
-                "file": "images/down.png",
-                "name": "IMAGE_DOWN",
-                "type": "png"
-            },
-            {
-                "file": "images/flat.png",
-                "name": "IMAGE_FLAT",
-                "type": "png"
-            },
-            {
-                "file": "images/up45.png",
-                "name": "IMAGE_UP45",
-                "type": "png"
-            },
-            {
-                "file": "images/upup.png",
-                "name": "IMAGE_UPUP",
-                "type": "png"
-            },
-            {
-                "file": "images/up.png",
-                "name": "IMAGE_UP",
-                "type": "png"
-            },
-            {
-                "file": "images/logo.png",
-                "name": "IMAGE_MENU_ICON",
-                "type": "png",
-                "menuIcon": true
-            }
-        ]
-    },
+    "longName": "CGM",
     "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9",
+    "shortName": "CGM",
     "capabilities": [
         ""
     ],
-    "shortName": "CGM",
-    "versionCode": 2
+    "versionCode": 2,
+    "resources": {
+        "media": [
+            {
+                "menuIcon": true,
+                "file": "images/logo.png",
+                "type": "png",
+                "name": "IMAGE_MENU_ICON"
+            },
+            {
+                "file": "images/up.png",
+                "type": "png",
+                "name": "IMAGE_UP"
+            },
+            {
+                "file": "images/upup.png",
+                "type": "png",
+                "name": "IMAGE_UPUP"
+            },
+            {
+                "file": "images/up45.png",
+                "type": "png",
+                "name": "IMAGE_UP45"
+            },
+            {
+                "file": "images/flat.png",
+                "type": "png",
+                "name": "IMAGE_FLAT"
+            },
+            {
+                "file": "images/down.png",
+                "type": "png",
+                "name": "IMAGE_DOWN"
+            },
+            {
+                "file": "images/downdown.png",
+                "type": "png",
+                "name": "IMAGE_DOWNDOWN"
+            },
+            {
+                "file": "images/down45.png",
+                "type": "png",
+                "name": "IMAGE_DOWN45"
+            },
+            {
+                "file": "images/none.png",
+                "type": "png",
+                "name": "IMAGE_NONE"
+            }
+        ]
+    },
+    "companyName": "HackingType1-CostikCare,LLC"
 }
