--- a/appinfo.json
+++ b/appinfo.json
@@ -1,72 +1,72 @@
 {
-    "appKeys": {
-        "readtime": 2,
-        "bg": 1,
-        "delta": 5,
-        "time": 4,
-        "alert": 3,
-        "icon": 0
-    },
-    "resources": {
-        "media": [
-            {
-                "name": "IMAGE_NONE",
-                "file": "images/none.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_DOWN45",
-                "file": "images/down45.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_DOWNDOWN",
-                "file": "images/downdown.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_DOWN",
-                "file": "images/down.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_FLAT",
-                "file": "images/flat.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_UP45",
-                "file": "images/up45.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_UPUP",
-                "file": "images/upup.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_UP",
-                "file": "images/up.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_MENU_ICON",
-                "file": "images/logo.png",
-                "type": "png",
-                "menuIcon": true
-            }
-        ]
-    },
-    "watchapp": {
-        "watchface": true
-    },
-    "shortName": "CGM",
-    "versionLabel": "2.0.0",
     "versionCode": 2,
-    "companyName": "HackingType1-CostikCare,LLC",
-    "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9",
+    "shortName": "CGM",
     "capabilities": [
         ""
     ],
+    "resources": {
+        "media": [
+            {
+                "type": "png",
+                "name": "IMAGE_NONE",
+                "file": "images/none.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_DOWN45",
+                "file": "images/down45.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_DOWNDOWN",
+                "file": "images/downdown.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_DOWN",
+                "file": "images/down.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_FLAT",
+                "file": "images/flat.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_UP45",
+                "file": "images/up45.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_UPUP",
+                "file": "images/upup.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_UP",
+                "file": "images/up.png"
+            },
+            {
+                "menuIcon": true,
+                "type": "png",
+                "name": "IMAGE_MENU_ICON",
+                "file": "images/logo.png"
+            }
+        ]
+    },
+    "versionLabel": "2.0.0",
+    "companyName": "HackingType1-CostikCare,LLC",
+    "watchapp": {
+        "watchface": true
+    },
+    "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9",
+    "appKeys": {
+        "alert": 3,
+        "bg": 1,
+        "icon": 0,
+        "readtime": 2,
+        "delta": 5,
+        "time": 4
+    },
     "longName": "CGM"
 }
