--- a/appinfo.json
+++ b/appinfo.json
@@ -1,72 +1,72 @@
 {
-    "appKeys": {
-        "readtime": 2,
-        "bg": 1,
-        "delta": 5,
-        "time": 4,
-        "alert": 3,
-        "icon": 0
-    },
     "resources": {
         "media": [
             {
                 "name": "IMAGE_MENU_ICON",
-                "file": "images/logo.png",
+                "menuIcon": true,
                 "type": "png",
-                "menuIcon": true
+                "file": "images/logo.png"
             },
             {
                 "name": "IMAGE_UP",
-                "file": "images/up.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/up.png"
             },
             {
                 "name": "IMAGE_UPUP",
-                "file": "images/upup.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/upup.png"
             },
             {
                 "name": "IMAGE_UP45",
-                "file": "images/up45.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/up45.png"
             },
             {
                 "name": "IMAGE_FLAT",
-                "file": "images/flat.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/flat.png"
             },
             {
                 "name": "IMAGE_DOWN",
-                "file": "images/down.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/down.png"
             },
             {
                 "name": "IMAGE_DOWNDOWN",
-                "file": "images/downdown.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/downdown.png"
             },
             {
                 "name": "IMAGE_DOWN45",
-                "file": "images/down45.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/down45.png"
             },
             {
                 "name": "IMAGE_NONE",
-                "file": "images/none.png",
-                "type": "png"
+                "type": "png",
+                "file": "images/none.png"
             }
         ]
     },
-    "watchapp": {
-        "watchface": true
-    },
-    "shortName": "CGM",
-    "versionLabel": "2.0.0",
-    "versionCode": 2,
     "companyName": "HackingType1-CostikCare,LLC",
+    "shortName": "CGM",
     "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9",
+    "versionCode": 2,
     "capabilities": [
         ""
     ],
-    "longName": "CGM"
+    "longName": "CGM",
+    "watchapp": {
+        "watchface": true
+    },
+    "appKeys": {
+        "delta": 5,
+        "time": 4,
+        "readtime": 2,
+        "alert": 3,
+        "bg": 1,
+        "icon": 0
+    },
+    "versionLabel": "2.0.0"
 }
