--- a/appinfo.json
+++ b/appinfo.json
@@ -1,72 +1,72 @@
 {
-    "resources": {
-        "media": [
-            {
-                "name": "IMAGE_MENU_ICON",
-                "menuIcon": true,
-                "type": "png",
-                "file": "images/logo.png"
-            },
-            {
-                "name": "IMAGE_UP",
-                "type": "png",
-                "file": "images/up.png"
-            },
-            {
-                "name": "IMAGE_UPUP",
-                "type": "png",
-                "file": "images/upup.png"
-            },
-            {
-                "name": "IMAGE_UP45",
-                "type": "png",
-                "file": "images/up45.png"
-            },
-            {
-                "name": "IMAGE_FLAT",
-                "type": "png",
-                "file": "images/flat.png"
-            },
-            {
-                "name": "IMAGE_DOWN",
-                "type": "png",
-                "file": "images/down.png"
-            },
-            {
-                "name": "IMAGE_DOWNDOWN",
-                "type": "png",
-                "file": "images/downdown.png"
-            },
-            {
-                "name": "IMAGE_DOWN45",
-                "type": "png",
-                "file": "images/down45.png"
-            },
-            {
-                "name": "IMAGE_NONE",
-                "type": "png",
-                "file": "images/none.png"
-            }
-        ]
-    },
-    "companyName": "HackingType1-CostikCare,LLC",
-    "shortName": "CGM",
     "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9",
-    "versionCode": 2,
+    "versionLabel": "2.0.0",
+    "companyName": "HackingType1-CostikCare,LLC",
     "capabilities": [
         ""
     ],
+    "shortName": "CGM",
     "longName": "CGM",
+    "versionCode": 2,
     "watchapp": {
         "watchface": true
     },
     "appKeys": {
         "delta": 5,
-        "time": 4,
         "readtime": 2,
+        "time": 4,
+        "icon": 0,
         "alert": 3,
-        "bg": 1,
-        "icon": 0
+        "bg": 1
     },
-    "versionLabel": "2.0.0"
+    "resources": {
+        "media": [
+            {
+                "type": "png",
+                "name": "IMAGE_NONE",
+                "file": "images/none.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_DOWN45",
+                "file": "images/down45.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_DOWNDOWN",
+                "file": "images/downdown.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_DOWN",
+                "file": "images/down.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_FLAT",
+                "file": "images/flat.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_UP45",
+                "file": "images/up45.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_UPUP",
+                "file": "images/upup.png"
+            },
+            {
+                "type": "png",
+                "name": "IMAGE_UP",
+                "file": "images/up.png"
+            },
+            {
+                "type": "png",
+                "menuIcon": true,
+                "name": "IMAGE_MENU_ICON",
+                "file": "images/logo.png"
+            }
+        ]
+    }
 }
