--- a/appinfo.json
+++ b/appinfo.json
@@ -175,10 +175,10 @@
             }
         ]
     },
-    "shortName": "CGM",
+    "shortName": "Nightscout",
     "uuid": "a4e66a45-f30d-4a13-9f0f-59343c6b23a9",
-    "versionCode": 9,
-    "versionLabel": "4.2",
+    "versionCode": 10,
+    "versionLabel": "4.2.0",
     "watchapp": {
         "watchface": true
     }
